; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/ap/extr_gas_serv.c_rx_anqp_query_list.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/ap/extr_gas_serv.c_rx_anqp_query_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostapd_data = type { i32 }
%struct.anqp_query_info = type { i32 }

@MSG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"ANQP: %u Info IDs requested in Query list\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hostapd_data*, i32*, i32*, %struct.anqp_query_info*)* @rx_anqp_query_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rx_anqp_query_list(%struct.hostapd_data* %0, i32* %1, i32* %2, %struct.anqp_query_info* %3) #0 {
  %5 = alloca %struct.hostapd_data*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.anqp_query_info*, align 8
  store %struct.hostapd_data* %0, %struct.hostapd_data** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store %struct.anqp_query_info* %3, %struct.anqp_query_info** %8, align 8
  %9 = load i32, i32* @MSG_DEBUG, align 4
  %10 = load i32*, i32** %7, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = ptrtoint i32* %10 to i64
  %13 = ptrtoint i32* %11 to i64
  %14 = sub i64 %12, %13
  %15 = sdiv exact i64 %14, 4
  %16 = trunc i64 %15 to i32
  %17 = udiv i32 %16, 2
  %18 = call i32 @wpa_printf(i32 %9, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i32 %17)
  br label %19

19:                                               ; preds = %27, %4
  %20 = load i32*, i32** %7, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = ptrtoint i32* %20 to i64
  %23 = ptrtoint i32* %21 to i64
  %24 = sub i64 %22, %23
  %25 = sdiv exact i64 %24, 4
  %26 = icmp sge i64 %25, 2
  br i1 %26, label %27, label %35

27:                                               ; preds = %19
  %28 = load %struct.hostapd_data*, %struct.hostapd_data** %5, align 8
  %29 = load i32*, i32** %6, align 8
  %30 = call i32 @WPA_GET_LE16(i32* %29)
  %31 = load %struct.anqp_query_info*, %struct.anqp_query_info** %8, align 8
  %32 = call i32 @rx_anqp_query_list_id(%struct.hostapd_data* %28, i32 %30, %struct.anqp_query_info* %31)
  %33 = load i32*, i32** %6, align 8
  %34 = getelementptr inbounds i32, i32* %33, i64 2
  store i32* %34, i32** %6, align 8
  br label %19

35:                                               ; preds = %19
  ret void
}

declare dso_local i32 @wpa_printf(i32, i8*, i32) #1

declare dso_local i32 @rx_anqp_query_list_id(%struct.hostapd_data*, i32, %struct.anqp_query_info*) #1

declare dso_local i32 @WPA_GET_LE16(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
